--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Peg Website</title>
-    <link rel="stylesheet" href="style.css?v=1001">
+    <link rel="stylesheet" href="style.css?v=1003">
 </head>
 
 <body>
@@ -14,14 +14,35 @@
      ============================ -->
 <div id="intro-screen">
     <img src="images/rugtemp2.jpeg" class="intro-bg">
-
-    <div id="slider-track">
-        <span id="slider-text">drag to enter</span>
+    <div id="intro-header" class="twister-text">
+        <h1 class="intro-name">Mike "Peg" Knauer</h1>
+        <h2 class="intro-role">Assistant Director / Filmmaker</h2>
+        <h3 class="intro-cities">NY / CHI / LA</h3>
     </div>
 
+    <div id="slider-track"></div>
+
+    <!-- ⭐ SLIDE TO ENTER TEXT -->
+    <div id="slider-text" class="twister-text">
+        <span class="c1">S</span>
+        <span class="c2">L</span>
+        <span class="c3">I</span>
+        <span class="c4">D</span>
+        <span class="c5">E</span>
+        <span>&nbsp;</span>
+        <span class="c6">T</span>
+        <span class="c7">O</span>
+        <span>&nbsp;</span>
+        <span class="c8">E</span>
+        <span class="c1">N</span>
+        <span class="c2">T</span>
+        <span class="c3">E</span>
+        <span class="c4">R</span>
+    </div>
+
+    <!-- ⭐ DRAGGABLE CAR (ORIGINAL, NO HITBOX) -->
     <img src="images/carmouse.png.webp" id="drag-car">
 </div>
-
 
 
 <!-- ============================
@@ -34,23 +55,39 @@
             <img src="images/chatgpt_edit.jpg" class="full-img">
             <a href="ohio.html" class="ohio-hotspot"></a>
             <a href="recent.html" class="recent-hotspot"></a>
+            <a href="documents/Peg_Knauer_AD_Resume_HeaderFix.pdf" class="resume-hotspot" target="_blank"></a>
+            <a href="https://www.nobudge.com/wilk" class="creative-hotspot" target="_blank"></a>
+            <a href="mailto:mikeknauer17@gmail.com" class="contact-hotspot"></a>
         </div>
     </div>
 
     <div class="right">
         <img src="images/26361732_331396884032889_543068210505711616_n.jpg" class="right-img">
-        <p class="credit">George Bellows (1915), Public Domain — thanks twin.</p>
+        <p class="right-note">
+            @pegfilm 2018<br>
+            Mike "Peg" Knauer<br>
+            1st AD / Filmmaker<br>
+            Life is awesome!
+        </p>
     </div>
 
 </div>
 
 
 <!-- ============================
-     DRAG-TO-ENTER SCRIPT
+     ORIGINAL DRAG-TO-ENTER SCRIPT
+     (exactly what you started with)
      ============================ -->
 <script>
+// If desktop, skip intro entirely
+if (window.innerWidth >= 900) {
+    document.getElementById("intro-screen").style.display = "none";
+}
+
+// --- your existing script continues below ---
 const car = document.getElementById("drag-car");
 const intro = document.getElementById("intro-screen");
+
 
 let isDragging = false;
 let startX = 0;
@@ -98,6 +135,15 @@ car.addEventListener("pointerup", () => {
 });
 </script>
 
+<!-- ============================
+     ANIMATED WAVE FOOTER
+     ============================ -->
+<div class="wave-footer">
+    <div class="wave wave1"></div>
+    <div class="wave wave2"></div>
+    <div class="wave wave3"></div>
+    <div class="wave wave4"></div>
+</div>
 
 </body>
 </html>
